k8s/api/course-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: buet-hackathon-namespace
  name: course-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: 863518452741.dkr.ecr.ap-south-1.amazonaws.com/course:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi" # Minimal memory request
              cpu: "5m" # Minimal CPU request
            limits:
              memory: "256Mi" # Minimal memory limit
              cpu: "250m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  namespace: buet-hackathon-namespace
  name: course-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: course
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: buet-hackathon-namespace
  name: course-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-prod
#     nginx.ingress.kubernetes.io/use-regex: "true"  # Optional, if regex is used in paths
#     nginx.ingress.kubernetes.io/rewrite-target: /$1  # Optional, for handling path rewrites
spec:
  tls:
    - hosts:
        - course.buet-hackathon-namespace.example.com
      secretName: course-buet-hackathon-namespace-tls
  rules:
    - host: course.buet-hackathon-namespace.example.com
      http:
        paths:
          - path: /v1/course
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 80
